have no idea why, but postDelayed force text in my custom view to freeze. First task done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StatsView</string>
+    <string name="onanimationstart">onAnimationStart</string>
+    <string name="onanimationend">onAnimationEnd</string>
+    <string name="onanimationrepeat">onAnimationRepeat</string>
 </resources>
